# studentraid

./: CMakeLists.txt  README.md  raid.conf
Include/: RAID5.h  RAIDProcessor.h  RAIDconfig.h  RDP.h  RS.h  arithmetic.h  array.h  config.h  disk.h  locker.h  misc.h  sync.h  usecase.h
RAID/: RAID5.cpp  RDP.cpp  RS.cpp  arithmetic.cpp
confuse/: config_linux.h  config_win32.h  confuse.c  confuse.h  lexer.c
disk/: RAIDProcessor.cpp  array.cpp  disk.cpp
src/: locker.cpp  main.cpp  misc.cpp  usecase.cpp
